samconf (0.52.4-7) unstable; urgency=medium

  * Split libmock-smaconf0 libraries into their own package.
  * Clean up generated documentation before building.

 -- Isaac True <isaac.true@emlix.com>  Wed, 08 May 2024 15:08:02 +0200

samconf (0.52.4-6) unstable; urgency=medium

  * Add the following build dependencies:
     -  pandoc
     -  pandoc-plantuml-filter
     -  graphviz
  * Add documentation files to samconf-doc package.

 -- Isaac True <isaac.true@emlix.com>  Wed, 08 May 2024 14:10:27 +0200

samconf (0.52.4-5) unstable; urgency=medium

  * Update gbp.conf with the new branch names.

 -- Isaac True <isaac.true@emlix.com>  Tue, 07 May 2024 15:54:19 +0200

samconf (0.52.4-4) unstable; urgency=medium

  * Remove the following packages from the build dependencies as they are now
    pulled in by libcmocka-mocks-dev:
     - libssl-dev
     - libjson-c-dev
     - libmnl-dev

 -- Isaac True <isaac.true@emlix.com>  Tue, 07 May 2024 15:18:18 +0200

samconf (0.52.4-3) unstable; urgency=medium

  * Add the following packages to the build dependencies:
      - libssl-dev
      - libjson-c-dev
      - libcmocka-mocks-dev
      - libsafu-dev
      - cmocka-extensions-dev
      - pkg-config
      - libmnl-dev
  * Add libsafu-dev to the dependencies for libsamconf-dev.

 -- Isaac True <isaac.true@emlix.com>  Tue, 07 May 2024 14:52:57 +0200

samconf (0.52.4-2) unstable; urgency=medium

  * Add gbp.conf.

 -- Isaac True <isaac.true@emlix.com>  Tue, 07 May 2024 14:24:50 +0200

samconf (0.52.4-1) unstable; urgency=medium

  * Initial release.

 -- Isaac True <isaac.true@emlix.com>  Mon, 06 May 2024 16:28:11 +0200